# aws-cw-tui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  service_organization_plan.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  feature-ci.yml  release.yml
scripts/: test-release.sh
src/: app.rs  aws.rs  config.rs  event_handler.rs  lib.rs  main.rs  models.rs  terminal.rs  tests.rs  ui.rs
src/aws/: cloudwatch_service.rs  dynamic_metric_discovery.rs  error_utils.rs  metric_builder.rs  metric_fetcher.rs  metric_types.rs  mod.rs  rds_service.rs  session.rs  sqs_metrics.rs  sqs_service.rs  time_range.rs
src/aws/metrics/: discovery.rs  fetcher.rs  formatter.rs  mod.rs  statistics.rs  types.rs  units.rs
src/aws/rds/: client.rs  instances.rs  metrics.rs  mod.rs
src/aws/services/: mod.rs
src/config/: app_config.rs  aws_config.rs  config_manager.rs  debug_config.rs  mod.rs  test_config_manager.rs  ui_config.rs
src/core/: mod.rs  workflow_memory.rs
src/core/app/: initialization.rs  instance_access.rs  metrics_management.rs  mod.rs  navigation.rs  screen_navigation.rs  service_management.rs  state_management.rs  time_range_management.rs  ui_state.rs
src/models/: app_state.rs  aws_services.rs  metrics.rs  mod.rs
src/services/: mod.rs
src/tests/: border_factory_tests.rs  core_integration_tests.rs  focus_integration_tests.rs  mod.rs  model_tests.rs  page_system_tests.rs  simple_focus_test.rs  test_utils.rs
src/ui/: mod.rs  performance.rs  renderer.rs
src/utils/: mod.rs
(+109 files in other folders)
