[package]
name = "awscw"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
aws-config = "1.1"
aws-sdk-rds = "1.1"
aws-sdk-cloudwatch = "1.1"
aws-sdk-sts = "1.1"
aws-sdk-sqs = "1.1"
async-trait = "0.1"
anyhow = "1.0"
chrono = "0.4"
