[package]
name = "awscw"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
aws-config = "1.1"
aws-sdk-rds = "1.1"
aws-sdk-cloudwatch = "1.1"
aws-sdk-sts = "1.1"
aws-sdk-sqs = "1.1"
async-trait = "0.1"
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
thiserror = "1.0"
regex = "1.0"
rand = "0.8"

# Enhanced logging with tracing ecosystem
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"
tracing-error = "0.2"
color-eyre = "0.6"

# Keep for backward compatibility during migration
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"
